# blursk

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  about.c  acconfig.h  aclocal.m4  bitmap.c  blur.c  blursk.c  blursk.h  color.c  config.c  config.h.in  configure  configure.in  img.c  logo.xpm  loop.c  loopx86.s  paste.c  render.c  text.c  xv.c
