dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([blursk.c])
AM_INIT_AUTOMAKE(Blursk,1.3)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_ARG_ENABLE( one-plugin-dir,
[  --enable-one-plugin-dir  use a single plugin dir [default=no]],,
                enable_one_plugin_dir="no")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(XMMS_PATH,xmms,no)

if test "x$XMMS_PATH" = "xno"; then
	echo "XMMS does not appear to be installed."
	exit 1
fi

dnl Checks for libraries.
AM_PATH_GLIB(1.2.2,,AC_MSG_ERROR([*** GLIB >= 1.2.2 not installed - please install first ***]))
AM_PATH_GTK(1.2.2,,AC_MSG_ERROR([*** GTK+ >= 1.2.2 not installed - please install first ***]),gthread)

dnl
dnl Checks for Xv extension
dnl

X_LIBS="-L/usr/X11R6/lib"
AC_CHECK_LIB(Xv, XvShmCreateImage, 
             X_LIBS="$X_LIBS -lXv"
	     AC_DEFINE(HAVE_XV)
	     ac_have_xv="yes",,
             $X_LIBS $X_PRE_LIBS -lXext $X_EXTRA_LIBS)
dnl AM_CONDITIONAL(HAVE_XV, test x$ac_have_xv = "xyes")

AC_CHECK_LIB(dl, dlsym,
	     AC_DEFINE(HAVE_DL)
	     ac_use_dlopen="yes",,
	     -ldl)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

dnl Checks for library functions.
AC_HEADER_STDC

dnl Other stuff
AC_MSG_CHECKING(machine architecture)
AC_SUBST(ARCH_TYPE)
ARCH_TYPE=`uname -m`
AC_MSG_RESULT($ARCH_TYPE)

AM_CONDITIONAL(ARCH_X86,test "$ARCH_TYPE" = "i386" || test "$ARCH_TYPE" = "i486" || test "$ARCH_TYPE" = "i586" || test "$ARCH_TYPE" = "i686" || test "$ARCH_TYPE" = "i86pc")

plugindir=$libdir/xmms

AC_SUBST(plugindir)

if test "x$enable_one_plugin_dir" = "xyes"; then
	VISUALIZATION_PLUGIN_DIR=Plugins
else
	VISUALIZATION_PLUGIN_DIR=Visualization
fi

AC_SUBST(VISUALIZATION_PLUGIN_DIR)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

